--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <section id = "Home">
               <div class="row column1">
                 <div class="col-lg-5 col-md-5 first-image">
-                    <img class = "boyimage" src="ImageP/pooja.png"  alt="Photo af Pooja"> 
+                    <img class = "boyimage" src="pooja.png"  alt="Photo af Pooja"> 
                       <pre class="tab">
                         <br> Address : Solveien 31, 4879, <br>           Grimstad, Norway <br> Gmail   : poojajoshibits@gmail.com<br> Tel     : +47 463 79 458 <br> URL     :</pre>  
                       </div>
