--- a/Project.html
+++ b/Project.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Ajit's Portfolio</title>
+        <title>Pooja's Portfolio</title>
         <link rel="icon" href="Image/engineer.ico">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="Project.css">
@@ -21,7 +21,7 @@
       <body class="container-fluid body_section">
               <header>
                     <nav class="navbar navbar-expand-lg navbar-light ">
-                      <a class="navbar-brand brand-name" href="#">Ajit Verma</a>
+                      <a class="navbar-brand brand-name" href="#">Pooja Joshi</a>
                       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -56,8 +56,7 @@
                         </div>
                         <div class="col-lg-6 col-md-6 project-heading">
                           <h1 class = "P-heading">Projects</h1>
-                          <p class="p-text">My Project uses various technology to make the model more accurate and stable. As of
-                            Now I didn't done many projects but in near feature I will make more projects.
+                          <p class="p-text">more projects.
                           </p>
 
                         </div>
