--- a/contact.html
+++ b/contact.html
@@ -66,12 +66,12 @@
                 <p>I am avalible in almost every social platform.<br>
                     Discuss a project or just want to say hi ? My Inbox is always open for all.</p>
                 <ul class="ico">
-                    <li class="icon"><a href="https://github.com/AjitVerma15" target=_blank><span class="iconify github" data-icon="ant-design:github-filled" data-inline="false"  data-width="50" data-height="50"></span></li></a>
-                     <li class="icon"><a href="https://www.instagram.com/ajit.verma_/" target=_blank><span class="iconify instagram" data-icon="entypo-social:instagram-with-circle" data-inline="false" data-width="50" data-height="50"></span></li></a>
-                     <li class="icon"><a href="https://www.linkedin.com/in/ajit-verma-70b9b0196/" target=_blank><span class="iconify linkedin" data-icon="entypo-social:linkedin-with-circle" data-inline="false"  data-width="50" data-height="50"></span></li></a>
-                    <li class="icon"><a href="mailto:ajitverma1503@gmail.com" target=_blank><span class="iconify google" data-icon="ant-design:google-plus-circle-filled" data-inline="false" data-width="50" data-height="50"></span></li></a>
+                    <li class="icon"><a href="https://github.com/pooja-joshi-bits/" target=_blank><span class="iconify github" data-icon="ant-design:github-filled" data-inline="false"  data-width="50" data-height="50"></span></li></a>
+                    
+                    <li class="icon"><a href="https://www.linkedin.com/in/pooja-joshi-028011a3/" target=_blank><span class="iconify linkedin" data-icon="entypo-social:linkedin-with-circle" data-inline="false"  data-width="50" data-height="50"></span></li></a>
+                    <li class="icon"><a href="mailto:poojajoshibits@gmail.com" target=_blank><span class="iconify google" data-icon="ant-design:google-plus-circle-filled" data-inline="false" data-width="50" data-height="50"></span></li></a>
                     </ul>
-                    <a href="https://drive.google.com/file/d/1fUl3-3KZQbWz3x6eBLSC2qZboLyWgj6o/view?usp=sharing" target=_blank><button type="button" class="btn btn-primary btn-lg Resume">See my Resume</button></a>
+                    <a href="https://drive.google.com/file/d/1_1N-WsnbP63uJ_opSrsUblGrLaVVbVhS/view?usp=sharing" target=_blank><button type="button" class="btn btn-primary btn-lg Resume">See my Resume</button></a>
              </div>
         </div>
         </section>
