--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="col-lg-5 col-md-5 first-image">
                     <img class = "boyimage" src="ImageP/pooja.png"  alt="Photo af Pooja"> 
                       <pre class="tab">
-                        <br> Address : Solveien 31, 4879, <br>           Grimstad, Norway <br> Gmail   : poojajoshibits@gmail.com<br> Tel     : +47 463 79 458 <br> URL     :</pre>  
+                        <br> Address : Solveien 31, 4879, <br>           Grimstad, Norway <br> Gmail   : poojajoshibits@gmail.com<br> Tel     : +47 463 79 458   
                       </div>
                   </div>
                 <div>  
@@ -82,8 +82,8 @@
                       <h1 align="left"> Min Ekspertise? </h1>
                       <p class ="Features-paragraph"> 
                         💥Experience of working with different python Libraries like Numpy,Pandas,Matplotlib,etc.
-                        💥
-                        💥Experience of working with different python Libraries like Numpy,Pandas,Matplotlib,etc and have knowlege of Data analyitical algorithm and techniques.
+                        💥 STATA, EViews.
+                
                 
                       <\p>
                       </div>
