--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                 <div>  
                       <h1 align="left"> </h1>
                       <p class ="Features-paragraph" align="justify"> 
-                      <b> 💥News</b> <br>
+                      <b> News</b> <br>
                       <ul>
-                          <li><p> I am taking this exciting course on <b> Big Data Analytics </b> offered by NIELIT. See <a " href="https://nielit.gov.in/sites/default/files/headquarter/pdf/bigdata.pdf"><u>Link</u></a> </p> </li>
-                          <li><p> See my project of stock market prediction using Deep learning. Code -> available on <b> Github </b>. See <a " href="https://github.com/pooja-joshi-bits"><u>Github</u></a> </p> </li>
+                          <li><p> 💥 I am taking this exciting course on <b> Big Data Analytics </b> offered by NIELIT. See <a " href="https://nielit.gov.in/sites/default/files/headquarter/pdf/bigdata.pdf"><u>Link</u></a> </p> </li>
+                          <li><p> 💥 See my project of stock market prediction using Deep learning. Code -> available on <b> Github </b>. See <a " href="https://github.com/pooja-joshi-bits"><u>Github</u></a> </p> </li>
 
                       </ul>
                       
