--- a/Project.html
+++ b/Project.html
@@ -76,9 +76,9 @@
                         <a  class="Project-box" href="" >
                         <div class="card boxx">
                           <div class="card-body">
-                            <h5 class="card-title">Telegram Bot</h5>
-                            <p class="card-text project-text">This bot gives news on diferent topic like Sports, Entertainment according to location and can do small-talk and also
-                              show the covid cases in your state<span class="iconify" data-icon="logos:python" data-inline="false"></span><img class="iconify" src="Image/dialogflow.png" alt=""></p>
+                            <h5 class="card-title">Macroeconomics</h5>
+                            <p class="card-text project-text">Project 1: Macroeconomic Variables and Stock Market Indicators: An Empirical
+                              Analysis</p>
                           </div>
                         </div>
                       </a>
