--- a/index.html
+++ b/index.html
@@ -67,16 +67,17 @@
                   </div>
                 <div>  
                       <h1 align="left"> Hei ! Jeg er Pooja <span class="wave">👋</span></h1>
-                      <p class ="Features-paragraph" align="justify"> I'm a passionate Economist (PhD, MBA) with an experience in statistical data analysis of financial entities.
-                      I am an <br> avid reader, and loves to work for the Nexus of Economics, Data  and Technology in an AI(Artificial Intelligence) <br> driven real life application (Such as Finance, Healthcare, etc.).</p> 
+                      <p class ="Features-paragraph" align="justify"> I'm a passionate researcher (PhD, MBA, and Diploma in Computer Science). I have an interdisciplinary education <br> background, and I have significant experience 
+                      with an experience in statistical data analysis of financial entities. <br> I am an avid reader, and loves to work for the Nexus of Economics, Data  and Technology in an AI(Artificial-<br> Intelligence) driven real life application (Such as Finance, Healthcare, etc.).</p> 
                       </div>
                 <div>  
                       <h1 align="left"> </h1>
                       <p class ="Features-paragraph" align="justify"> 
-                      <b> News</b> <br>
+                      <b> 💥 News</b> <br>
                       <ul>
-                          <li><p> 💥 I am taking this exciting course on <b> Big Data Analytics </b> offered by NIELIT. See <a " href="https://nielit.gov.in/sites/default/files/headquarter/pdf/bigdata.pdf"><u>Link</u></a> </p> </li>
-                          <li><p> 💥 See my project of stock market prediction using Deep learning. Code -> available on <b> Github </b>. See <a " href="https://github.com/pooja-joshi-bits"><u>Github</u></a> </p> </li>
+                          <li><p> I am taking this exciting course on <b> Big Data Analytics </b> offered by NIELIT. See <a " href="https://nielit.gov.in/sites/default/files/headquarter/pdf/bigdata.pdf"><u>Link</u>.</a> </p> </li>
+                          <li><p> See my project of stock market prediction using Deep learning. Python Code is available on <a " href="https://github.com/pooja-joshi-bits"><u>Github</u></a>.</p> </li>
+                          <li><p> I am taking this short course on <b> Basics of Natural Language Processing</b>. See <a " href="https://www.nielit.gov.in/calicut/content/online-course-basics-natural-language-processing"><u>Link</u></a>. </p> </li>.
 
                       </ul>
                       
