--- a/skill.html
+++ b/skill.html
@@ -60,8 +60,16 @@
           <div>  
             <h1 align="left"> Min Ekspertise? </h1>
             <p class ="Features-paragraph"> 
-              💥Experience of working with different python Libraries like Numpy, Pandas, Matplotlib, etc. <br>
-              💥 STATA, and EViews.                            
+              <ul>
+              <li> <p> STATA, EViews, and Python </p> </li>
+              <li> <p> LATEX and MS Office </p> </li>
+              <li>  <p>Experience of working with different python Libraries like Numpy, Pandas, Matplotlib, etc. </p></li>
+              <li> <p> Research and Case study design</p> </li>
+              <li> <p> HTML, CSS</p> </li>
+              <li> <p> Machine Learning (Focus is on Implementation techniques rathar than developing algorithms)</p> </li>
+
+
+              </ul>                          
             </p> <br>
 
             <h1 align="left"> Hva gjør jeg? </h1>
