--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                   </div>
                 <div>  
                       <h1 align="left"> Hei ! Jeg er Pooja <span class="wave">👋</span></h1>
-                      <p class ="Features-paragraph" align="justify"> I'm a passionate researcher (PhD, MBA, and Diploma in Computer Science). I have an interdisciplinary education <br> background, and I have significant experience 
+                      <p class ="Features-paragraph" align="justify"> I'm a passionate researcher having an interdisciplinary education background (PhD, MBA, and Diploma in Computer Science). I have  background, <br> and I have significant experience 
                       of statistical data analysis for financial entities. <br> I am an avid reader, and loves to work for the Nexus of Economics, Data  and Technology in an AI(Artificial-<br> Intelligence) driven real life application (Such as Finance, Healthcare, etc.).</p> 
                       </div>
                 <div>  
