--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                   </div>
                 <div>  
                       <h1 align="left"> Hei ! Jeg er Pooja <span class="wave">👋</span></h1>
-                      <p class ="Features-paragraph" align="justify"> I'm a passionate researcher having an interdisciplinary education background (PhD, MBA, and Diploma in <br> Computer Science). I have significant experience 
-                      of statistical data analysis for financial entities.  I am an <br> avid reader, and loves to write code for data analytics. In addition, I prefer to work for the Nexus of Economics, Data  and Technology in an AI(Artificial-<br> Intelligence) driven real life application (Such as Finance, Healthcare, etc.).</p> 
+                      <p class ="Features-paragraph" align="justify"> I'm a passionate researcher having an interdisciplinary education background (PhD, MBA, and Diploma in  Computer <br> Science). I have significant experience 
+                      of statistical data analysis for financial entities.  I am an  avid reader, and loves <br> to write code for data analysis. In addition, I prefer to work for the Nexus of Economics, Data  and Technology in an <br> AI (Artificial-Intelligence) driven real life application (Such as Finance, Healthcare, etc.).</p> 
                       </div>
                 <div>  
                       <h1 align="left"> </h1>
