--- a/Publications.html
+++ b/Publications.html
@@ -111,7 +111,7 @@
                                   <p>
                                     Joshi, P., Giri, A. K. (2015). Cointegration and causality between macroeconomic
                                     variables and stock prices: empirical analysis from Indian economy. Business and
-                                    Economic Research, 5(2), 327-345. <a " href="https://d1wqtxts1xzle7.cloudfront.net/40746988/BER-V5N2-2015.pdf?1450015424=&response-content-disposition=inline%3B+filename%3DBusiness_and_Economic_Research_Vol_5_No.pdf&Expires=1619973287&Signature=Bmx4ZR1~ocegvuDS2qXInTuC41MWq5cDhjaQkTQ1w47ZwvKmQm9Tfktra77-dd-GycfyoqLb1ZnEZeoC4g-XHAm2eNeRHdfB~Ovp6HTqSVromNn9FYtYBElTSm1I~lJDpioqS~509~AAutaRmlUzVltjfQy9FAHnmifCDkM5gzhOHCRjojAZu9DEZrZA8iIGwGz32pzWTgbacPhne9pDIpu0qNUnLZOJQGs~qSb6r~KzBeQFSKhsydQGWl0uumuc1eSB4HeFwueu4zbP1jqft5s2jO9t9v5AodF348s840UP1RjWIRZAGWjCh-rJXY14ynLkr5lYrabBIMnehyK1Ig__&Key-Pair-Id=APKAJLOHF5GGSLRBV4ZA#page=332"><u>Link</u></a>
+                                    Economic Research, 5(2), 327-345. <a " href="https://ideas.repec.org/a/mth/ber888/v5y2015i2p327-345.html"><u>Link</u></a>
                                   </p>
                                </li>
 
