--- a/skill.html
+++ b/skill.html
@@ -62,13 +62,11 @@
             <p class ="Features-paragraph"> 
               <ul>
               <li> <p> STATA, EViews, and Python </p> </li>
-              <li> <p> LATEX and MS Office </p> </li>
-              <li>  <p>Experience of working with different python Libraries like Numpy, Pandas, Matplotlib, etc. </p></li>
-              <li> <p> Research and Case study design</p> </li>
-              <li> <p> HTML, CSS</p> </li>
               <li> <p> Machine Learning (Focus is on Implementation techniques rathar than developing algorithms)</p> </li>
-
-
+              <li>  <p>Experience of working with different python Libraries like Numpy, Pandas, Matplotlib, etc. </p></li>
+              <li> <p> LATEX and MS Office </p> </li>
+              <li> <p> Research and Case study design</p> </li>
+              <li> <p> HTML, CSS (See my portfolio, although without JavaScript)</p> </li>
               </ul>                          
             </p> <br>
 
