--- a/Project.html
+++ b/Project.html
@@ -62,9 +62,9 @@
                         <a class="Project-box" href="">
                         <div class="card boxx">
                           <div class="card-body">
-                            <h5 class="card-title">Advance Attendence System</h5>
-                            <p class="card-text project-text">This project makes the traditional attendence system advance by including features
-                              like marking attendence of students automatically using face recognition and detection.
+                            <p>Machine Learning</p>
+                            <p class="card-text project-text">
+                              <a " href="Project1.html"><u>See my work </u></a> 
                               <span class="iconify" data-icon="logos:python" data-inline="false"></span>
                             </p>
 
@@ -79,6 +79,7 @@
                             <h5 class="card-title">Macroeconomics</h5>
                             <p class="card-text project-text">Project 1: Macroeconomic Variables and Stock Market Indicators: An Empirical
                               Analysis</p>
+
                           </div>
                         </div>
                       </a>
