--- a/more.html
+++ b/more.html
@@ -66,7 +66,7 @@
                       <ul>
                         <li>
                           <p>
-                            Norway is a natural paradise. These pictures will surely conveince you :).
+                            Norway is a natural paradise. These pictures will surely convince you :).
                             <a " href="https://drive.google.com/drive/folders/1Z34940t-G1eGf7SUWepCC95a_efIGdxl?usp=sharing"><u> (Link) </u></a> 
                             
                           </p>
