--- a/skill.html
+++ b/skill.html
@@ -61,12 +61,13 @@
             <h1 align="left"> Min Ekspertise? </h1>
             <p class ="Features-paragraph"> 
               <ul>
-              <li> <p> STATA, EViews, and Python </p> </li>
-              <li> <p> Machine Learning (Focus is on Implementation techniques rathar than developing algorithms)</p> </li>
-              <li>  <p>Experience of working with different python Libraries like Numpy, Pandas, Matplotlib, etc. </p></li>
+              <li> <p> STATA and EViews</p> </li>
+              <li> <p> Machine Learning (Focus is on use cases rathar than developing algorithms,  <a " href="Project1.html"><u>see my work </u></a>) </p> </li>
+              <li>  <p>Python (Experience with libraries like Numpy, Pandas, Matplotlib, etc.) </p></li>
               <li> <p> LATEX and MS Office </p> </li>
+              <li> <p> Git and Github (Version control systems design to handle large and small projects) </p> </li>
               <li> <p> Research and Case study design</p> </li>
-              <li> <p> HTML, CSS (See my portfolio, although without JavaScript)</p> </li>
+              <li> <p> HTML, CSS (See my portfolio)</p> </li>
               </ul>                          
             </p> <br>
 
