--- a/Project1.html
+++ b/Project1.html
@@ -1,1 +1,63 @@
-<a " href="Project.html"><u>Go back</u></a> 
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <a name="top"></a>
+  <p><span>&#183;</span> <a " href="Project.html"><u>Go Back</u></a> </p> 
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Pooja's Portfolio</title>
+  <link rel="icon" href="Image/engineer.ico">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="Project1.css">
+  
+  <link href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css" rel="stylesheet">
+  <link href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  
+
+</head>
+   
+
+    <body>
+        <div id="header">  <p style = "text-align:center">Artificial Intelligence and Machine Learning</p>        </div>
+        <div id="container">
+        <div id="first"> <b>It is difficult to think of a major industry that AI will not transform. This includes healthcare, education, transportation, retail, communications, and agriculture. There are surprisingly clear paths for AI to make a big difference in all of these industries.</b> </div>
+        <div id="second"> <b>Despite all the hype and excitement about AI, it's still extremely limited today relative to what human intelligence is. </b> <br><br><br><br><p style = "text-align:right">~Andrew Ng </p>        </div>
+        <div id="clear"></div>
+</div>
+    </body>
+    </html>
+
+    <br>
+
+
+    <section id = "Home">
+        <div>  
+          <h2 align="left"> Project 1 </h1>
+          <p class ="Features-paragraph"> 
+            <ul>
+            <li> <p> STATA and EViews</p> </li>
+            <li> <p> Machine Learning (Focus is on use cases rathar than developing algorithms,  <a " href="Project1.html"><u>see my work </u></a>) </p> </li>
+            <li>  <p>Python (Experience with libraries like Numpy, Pandas, Matplotlib, etc.) </p></li>
+            <li> <p> LATEX and MS Office </p> </li>
+            <li> <p> Git and Github (Version control systems design to handle large and small projects) </p> </li>
+            <li> <p> Research and Case study design</p> </li>
+            <li> <p> HTML, CSS (See my portfolio)</p> </li>
+            </ul>                          
+          </p> <br>
+
+        </div>
+    </section>
+
+
+    
+
+
+
+    <footer class=footer>Send Feedback <span>&#183;</span> <a " href="contact.html"><u>Admin </u></a> </footer> 
+                <a href="#top" align="right">Back to top of page</a>
