--- a/Project1.html
+++ b/Project1.html
@@ -35,13 +35,13 @@
 
     <br>
 
-
+<p>Machine Learning is classified as Supervised, Unsupervised and Reinforcement Learning. </p>
     <section id = "Home">
         <div>  
           <h2 align="left"> Project 1 </h1>
           <p class ="Features-paragraph"> 
             <ul>
-            <li> <p> STATA and EViews</p> </li>
+            <li> <p> Unsupervised Learning for clustering </p> </li>
             <li> <p> Machine Learning (Focus is on use cases rathar than developing algorithms,  <a " href="Project1.html"><u>see my work </u></a>) </p> </li>
             <li>  <p>Python (Experience with libraries like Numpy, Pandas, Matplotlib, etc.) </p></li>
             <li> <p> LATEX and MS Office </p> </li>
