--- a/index.html
+++ b/index.html
@@ -73,15 +73,17 @@
                                                                       (such as Finance, Healthcare, etc.). In addition, I am <br> working on how to present  use cases  of such  AI-driven applications  in  explainable ways.    
                       </p> 
                       </div>
-                <div>  
+                <div>  <br><br>
                       <h1 align="left"> </h1>
                       <p class ="Features-paragraph" align="justify"> 
                       <b> 💥 News</b> <br>
                       <ul>
-                          <li><p> I am taking this exciting course on <b> Big Data Analytics </b> offered by NIELIT. See <a " href="https://nielit.gov.in/sites/default/files/headquarter/pdf/bigdata.pdf"><u>Link</u>.</a> </p> </li>
-                          <li><p> See my project of stock market prediction using Deep learning. Python Code is available on <a " href="https://github.com/pooja-joshi-bits"><u>Github</u></a>.</p> </li>
-                          <li><p> I am taking this short course on <b> Basics of Natural Language Processing</b>. See <a " href="https://www.nielit.gov.in/calicut/content/online-course-basics-natural-language-processing"><u>Link</u></a>. </p> </li>.
-
+                        <li><p> 05/2021 Artificial Intelligence and Health Economics: Poster submitted to CEDAS conference 2021</b>. See <a " href="https://cedasconf.w.uib.no/"><u>Link.</u></a> </p> </li>
+                        <li><p> 05/2021 I am taking this short course on <b> Basics of Natural Language Processing</b>. See <a " href="https://www.nielit.gov.in/calicut/content/online-course-basics-natural-language-processing"><u>Link.</u></a> </p> </li>
+                        <li><p> 04/2021 See my project of stock market prediction using Deep learning. Python Code is available on <a " href="https://github.com/pooja-joshi-bits"><u>Github</u></a>.</p> </li>
+                        <li><p> 03/2021 I am taking this exciting course on <b> Big Data Analytics </b> offered by NIELIT. See <a " href="https://nielit.gov.in/sites/default/files/headquarter/pdf/bigdata.pdf"><u>Link</u>.</a> </p> </li>
+                        <li><p> 03/2021 "Counterfactuals and Health Economics" presentation at UiO (Post-doc Interview). See <a " href="https://drive.google.com/file/d/1wAWh7S3zVwf4ef362YnUsBc9evLcJBwV/view?usp=sharing"><u>Link</u>.</a> </p> </li>
+                        
                       </ul>
                       
                       </p>                           
