added ML project

--- a/Project1.html
+++ b/Project1.html
@@ -35,23 +35,42 @@
 
     <br>
 
-<p>Machine Learning is classified as Supervised, Unsupervised and Reinforcement Learning. </p>
+<p> Machine Learning is classified as Supervised, Unsupervised, and Reinforcement Learning. For most real-life applications, 
+  supervised ML and unsupervised ML suffices; however, in the scenario of sparse data set (and mostly for control applications such as Robotics), Reinforcement Learning is recommended. 
+  For any type of ML, the most important entity in the dataset. It is expected that we should have a significant amount of dataset for training an ML algorithm. In addition, 
+  the dataset must avoid repetitive occurrences (termed as a linear dependency).
+
+    </p>
     <section id = "Home">
         <div>  
-          <h2 align="left"> Project 1 </h1>
+          <h3 align="left"> Project 1 </h3>
           <p class ="Features-paragraph"> 
             <ul>
-            <li> <p> Unsupervised Learning for clustering </p> </li>
-            <li> <p> Machine Learning (Focus is on use cases rathar than developing algorithms,  <a " href="Project1.html"><u>see my work </u></a>) </p> </li>
-            <li>  <p>Python (Experience with libraries like Numpy, Pandas, Matplotlib, etc.) </p></li>
-            <li> <p> LATEX and MS Office </p> </li>
-            <li> <p> Git and Github (Version control systems design to handle large and small projects) </p> </li>
-            <li> <p> Research and Case study design</p> </li>
-            <li> <p> HTML, CSS (See my portfolio)</p> </li>
+            <li> <p> Unsupervised Learning for clustering <br> Here, we are performing unsupervised ML, where we have no prior information about the patterns of dataset. We intend to apply such algorithm to 
+            identify inferences from the dataset. </p> </li>
+            <div class="col-lg-6 col-md-6">
+              <img class = "Profilepic" src="Image/clustering.png" alt="">
+          </div>
+          <li> <p> You can find code on github. If you are intrested to see the mathamatical explanation of KNN model, then stay tuned. I will upload the Latex document.</p> </li>
+          
             </ul>                          
           </p> <br>
 
         </div>
+
+        <h3 align="left"> Project 2 </h3>
+        <p class ="Features-paragraph"> 
+          <ul>
+          <li> <p> Supervised Learning for Regression </p> </li>
+          
+          </ul>                          
+        </p> <br>
+
+      </div>
+
+
+
+
     </section>
 
 
