--- a/index.html
+++ b/index.html
@@ -67,10 +67,12 @@
                   </div>
                 <div>  
                       <h1 align="left"> Hei ! Jeg er Pooja <span class="wave">👋</span></h1>
-                      <p class ="Features-paragraph" align="justify"> I'm a passionate researcher having an interdisciplinary education background (Ph.D., MBA, and Diploma in <br> Computer  Science). 
-                                                                      I have significant experience in statistical data analysis for financial entities. I am an avid reader <br> and loves   to write code for  data analysis. 
-                                                                      I prefer to work for the Nexus of Economics, Data, and Technology in an <br> AI  (Artificial-Intelligence)  driven  real-life  application 
-                                                                      (such as Finance, Healthcare, etc.). In addition, I am <br> working on how to present  use cases  of such  AI-driven applications  in  explainable ways.    
+                      <p class ="Features-paragraph" align="justify"> I'm a passionate researcher having an interdisciplinary education background (Ph.D., MBA, and Diploma in <br> Computer  Applications). 
+                        I have significant experience in statistical data analysis for financial entities. I am an avid reader <br> and loves to write code for data analysis. 
+                           I prefer to work on the Nexus of Economics, Data, and Technology for an <br> AI  (Artificial-Intelligence)  driven  real-life  application 
+                           (such as Finance, Healthcare, etc.). In addition, I am <br> working on how to present use cases of such  AI-driven applications in an explainable way.
+
+
                       </p> 
                       </div>
                 <div>  <br><br>
