--- a/index.html
+++ b/index.html
@@ -68,14 +68,17 @@
                 <div>  
                       <h1 align="left"> Hei ! Jeg er Pooja <span class="wave">👋</span></h1>
                       <p class ="Features-paragraph" align="justify"> I'm a passionate researcher having an interdisciplinary education background (Ph.D., MBA, and Diploma in <br> Computer  Applications). 
-                        I have significant experience in statistical data analysis for financial entities. I am an avid reader <br> and loves to write code for data analysis. 
-                           I prefer to work on the Nexus of Economics, Data, and Technology for an <br> AI  (Artificial-Intelligence)  driven  real-life  application 
-                           (such as Finance, Healthcare, etc.). In addition, I am <br> working on how to present use cases of such  AI-driven applications in an explainable way.
+                        I have significant experience in statistical data analysis for financial entities. I am an avid  <br> reader and loves to write code for data analysis. 
+                           I prefer to work on the Nexus of Economics, Data, and Technology <br> for an  AI  (Artificial-Intelligence)  driven  real-life  application 
+                           (such as Finance, Healthcare, etc.). In addition, I am <br> working on how to present use cases of such  AI-driven applications in an explainable way. 
+                           Therefore, I am learning <br> that how such Technological  advancements works for real-life applications, their economic  prespective, and <br>  how companies and public utilities 
+                           can leverage the available data to achieve maximum growth objective. 
+                           
 
 
                       </p> 
                       </div>
-                <div>  <br><br>
+                <div>  
                       <h1 align="left"> </h1>
                       <p class ="Features-paragraph" align="justify"> 
                       <b> 💥 News</b> <br>
