--- a/index.html
+++ b/index.html
@@ -81,10 +81,11 @@
                       <p class ="Features-paragraph" align="justify"> 
                       <b> 💥 News</b> <br>
                       <ul>
-                        <li><p> 05/2021 Artificial Intelligence and Health Economics: Poster accepted to CEDAS conference, UiB, Norway 2021</b>. See <a " href="https://drive.google.com/file/d/1stujI8ZsUJzSE19Qw0R7-5Je9VJcs2O0/view?usp=sharing"><u>Link.</u></a> </p> </li>
+                        <li><p> 05/2021 Artificial Intelligence and Health Economics: Poster accepted to CEDAS conference, UiB, Norway 2021</b>. See Poster <a " href="https://drive.google.com/file/d/1stujI8ZsUJzSE19Qw0R7-5Je9VJcs2O0/view?usp=sharing"><u>Link,</u></a>  <a " href="https://drive.google.com/file/d/1HjDV__i3Qka7FSml8BmDtmCKcrLygQ-T/view?usp=sharing"><u>Discord.</u></a> </p> </li>
+                        <li><p> 03/2021 I am taking this exciting course on <b> Big Data Analytics </b> offered by NIELIT. See <a " href="https://nielit.gov.in/sites/default/files/headquarter/pdf/bigdata.pdf"><u>Link</u>,</a>  <a " href="https://drive.google.com/file/d/1N43spcoo7a4Gr-O6cBnvzuiK7OqtabbQ/view?usp=sharing"><u>Certificate.</u>.</a></p> </li>
                         <li><p> 05/2021 I am taking this short course on <b> Basics of Natural Language Processing</b>. See <a " href="https://www.nielit.gov.in/calicut/content/online-course-basics-natural-language-processing"><u>Link.</u></a> </p> </li>
                         <li><p> 04/2021 See my project of stock market prediction using Deep learning. Python Code is available on <a " href="https://github.com/pooja-joshi-bits"><u>Github</u></a>.</p> </li>
-                        <li><p> 03/2021 I am taking this exciting course on <b> Big Data Analytics </b> offered by NIELIT. See <a " href="https://nielit.gov.in/sites/default/files/headquarter/pdf/bigdata.pdf"><u>Link</u>.</a> </p> </li>
+                        
                         <li><p> 03/2021 "Counterfactuals and Health Economics" presentation at UiO (Post-doc Interview). See <a " href="https://drive.google.com/file/d/1wAWh7S3zVwf4ef362YnUsBc9evLcJBwV/view?usp=sharing"><u>Link</u>.</a> </p> </li>
                         <li><p> 02/2021 Happy to crack TOEFL. See <a " href="https://drive.google.com/file/d/1eww9xxFlhw1NafbC4ZculPyeYGW7sSZ6/view?usp=sharing"><u>Link</u>.</a> </p> </li>
                         
